# django-accsyBiz

./: .gitignore  Business_Licenses_-_Current_Active_20250908.url  QWEN.md  README.md  main.py  pyproject.toml
a_core/: settings.py  urls.py
a_features/: models.py
a_features/management/commands/: fillfeatures.py
a_features/migrations/: 0001_initial.py
a_pages/: apps.py  urls.py  views.py
a_pages/management/commands/: processcsv.py
a_places/: admin.py  models.py  urls.py  views.py
a_places/migrations/: 0001_initial.py  0002_place_business_category.py  0003_placefeature.py
a_posts/: admin.py  forms.py  models.py  urls.py  views.py
a_posts/migrations/: 0001_initial.py  0002_postfeature_body.py  0003_commentplace.py  0004_alter_postfeature_unique_together.py  0005_alter_commentplace_place_postfeaturevote.py  0006_postfeature_num_vote_down_postfeature_num_vote_up_and_more.py
a_users/: models.py  urls.py  views.py
a_users/migrations/: 0001_initial.py
accsyBiz/: manage.py
accsyBiz/accsyBiz/: asgi.py  settings.py  urls.py  wsgi.py
accsyBiz/templates/: base.html
templates/: base.html
templates/a_core/: home.html
templates/a_pages/: home.html
templates/a_places/: detail.html  feature_form.html
templates/a_posts/: comment_form.html  feature_form.html  postfeature_list.html
templates/a_users/: login.html  profile.html  signup.html
templates/cotton/: footer.html  navbar.html
