[project]
name = "django-accsybiz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.6",
    "django-stubs>=5.2.2",
    "polars>=1.33.0",
]


[tool.pyright]
reportIncompatibleVariableOverride = false
autoImportCompletions = true
